changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Change the order of some members in some of the large and often used structs in
order to pack them better. This will mainly help on x86_64, but also a bit on x86.
No actual functionality change. Some structs could be packed even better but that
would destroy the logical sectioning of the members in groups.
 include/living.h
 include/map.h
 include/newserver.h
 include/object.h
 include/player.h
Arvid Norlander 2008-05-27

Fix some more snprintf using a non-constant string as format parameter, and no
arguments to format string. Also change some more // comments to /**/, as crossfire
is C89 not C99. Add some missing prototypes to headers. Add missing value to a return.
Change from using strcasestr (GNU specific) to the already existing strcasestr_local
in one place.
 plugins/cflogger/cflogger.c
 plugins/cfnewspaper/cfnewspaper.c
 plugins/common/include/plugin_common.h
 server/hiscore.c
 server/login.c
 socket/lowlevel.c
 server/move.c
 server/player.c
 server/plugins.c
 server/server.c
 server/shop.c
 server/spell_effect.c
Arvid Norlander 2008-05-27

Fix some snprintf using a non-constant string as format parameter, and no
arguments to format string. Also change some // comments to /**/, as crossfire
is C89 not C99.
 common/anim.c
 common/init.c
 common/map.c
 common/readable.c
 common/shstr.c
Arvid Norlander 2008-05-25

Removed unused .cvsignore files, after all we use SVN since a long time.
 .cvsignore
 */.cvsignore
 */*/.cvsignore
 */*/*/.cvsignore
Arvid Norlander 2008-05-25

Add length parameter for some functions to be able to use snprintf instead of